# example-rocket-crud-rest-api

./: .env  Cargo.toml  README.md
migrations/2019-06-11-104710_create_users_table/: up.sql
src/: main.rs  schema.rs  user.rs
