[package]
name = "example-rocket-crud-rest-api"
version = "0.1.0"
authors = ["Paiman Bandi <mail@paiman.id>"]
edition = "2018"

[dependencies]
rocket = '0.4.1'
rocket_codegen = "0.4.1"
serde = "1.0.92"
serde_json = "1.0.39"
serde_derive = "1.0.92"
diesel = { version = "1.4.2", features = ["r2d2", "mysql"] }
dotenv = "0.14.1"

[dependencies.rocket_contrib]
version  = "0.4.1"
features = ["json"]

[profile.release]
overflow-checks = true
